site/css/style.css
body {
    font: 1.1em Helvetica, Arial, sans-serif;
    background: #FFFFFF;
    color: #000000;
}

a {
    color: #0000C0;
}

div#app {
    max-width: 50em;
    margin: auto;
    position: relative;
}

header#header {
    position: relative;
}

header#header a {
    display: block;
    height: 90%;
    width: 100%;
    max-width: 375px;
}

header#header h1 {
    height: 160px;
    margin: 0;
    font-size: 0;
    background-image: url(/static/img/logo-black.png);
    background-repeat: no-repeat;
    background-size: auto 150px;
    background-position-y: 5px;
    position: relative;
    z-index: 1;
}

.tabgroup {
    background: #F8F8F8;
    border: 1px solid #000;
    border-radius: .45em;
    padding: .2em 0;
    position: relative;
    top: -10px;
}

.tabgroup div {
    display: inline-block;
    cursor: pointer;
}

.tabgroup div#home-button {
    background-image: url(/static/img/home-white.png);
    background-size: auto 22px;
    background-repeat: no-repeat;
    background-position: .5em center;
}

.tabgroup div a {
    text-decoration: none;
    display: inline-block;
    padding: .5em 1em .5em 1em;
}

.tabgroup div#home-button a {
    padding-right: 1.65em;
}

.tabgroup div::after {
    padding: 0;
    display: inline-block;
    font-size: 1.2em;
    content: "/";
    position: relative;
    top: 3px;
}

.tabgroup div:first-child a, .tabgroup div.active a {
    color: #000;
}

.tabgroup div:last-child::after {
    content: "";
}

.tabgroup div:nth-child(1) a {
    text-indent: -9999px;
}

footer {
    text-align: center;
    font-size: .8em;
}

footer p {
    line-height: 1.6em;
}

[v-cloak] {
    display: none !important;
}

#current-season {
    border: 1px solid #222;
    background: #F8F8F8;
    border-radius: .75em;
    padding: .75em;
}

#current-season h2 {
    border-bottom: 1px double #222;
    padding: .5em 0;
    margin: .2em 0;
}

#current-season h3 {
    padding: 1em 0 .5em 0;
    margin: 0;
}

.event-in-progress, .event-incomplete-data, .event-team-submit {
    background: #B8EEFC;
    color: #254852;
    border: 1px solid #254852;
    border-radius: .2em;
    padding: .5em;
    margin-top: .5em;
}

.event-incomplete-data {
    background: #FCFAB8;
    color: #524B25;
    border: 1px solid #524B25;
    font-weight: normal;
}

.event-team-submit {
    background: #C0FCB8;
    color: #295225;
    border: 1px solid #295225;
    font-weight: normal;
}

.event-in-progress span {
    font-weight: normal;
    font-size: .85em;
}

.home-event-block {
    border: 1px solid #254852;
    border-radius: .25em;
    background: #F0F0F0;
    color: #000;
    text-decoration: none;
    display: inline-block;
    box-sizing: border-box;
    width: calc(33% - .55em);
    padding: 1em;
    margin: 0 1em 0 0;
}

.home-event-block.ip-block {
    margin: 0;
    box-sizing: border-box;
    width: 100%;
}

.home-event-block.ip-block > div {
    display: inline-block;
    padding-bottom: 0;
}

.home-event-block.ip-block > div:nth-child(1),
.home-event-block.ip-block > div:nth-child(2) {
    width: 70%;
    float: left;
}

.home-event-block.ip-block > div:nth-child(1) {
    width: calc(70% - 24px);
}

.home-event-block.ip-block > div:nth-child(3),
.home-event-block.ip-block > div:nth-child(4) {
    width: 14%;
    vertical-align: top;
}

.home-event-block:last-child {
    margin: 0;
}

.home-event-block > div {
    font-size: .9em;
    padding-bottom: .5em;
}

.home-event-block > div:last-child {
    padding-bottom: 0;
}

.home-event-block div.title {
    font-weight: bold;
    min-height: 20px;
    display: flex;
    align-items: center;
    padding-bottom: .25em;
    padding-left: 24px;
    font-size: 1.1em;
    text-decoration: underline;
    color: #0000C0;
    background-repeat: no-repeat;
    background-size: 20px 20px;
    background-position: 0px 2px;
}

.home-event-block.up-block div.title {
    text-decoration: none;
    color: #000;
}

.home-event-block div strong {
    font-size: .9em;
    display: block;
}

.home-event-block div em {
    font-size: .9em;
}

input, select {
    border: 1px solid #000000;
    border-radius: .4em;
    height: 1.75em;
    font-size: 1em;
    padding: .25em;
    box-sizing: border-box;
}

table {
    border-collapse: collapse;
    width: 100%;
    box-sizing: border-box;
}

th, td {
    padding: .3em .4em;
}

th {
    background: #404048;
    color: #FFFFFF;
    text-align: left;
    font-weight: bold;
}

tr {
    border-bottom: 1px solid #A0A0A0;
}

tr:nth-child(odd) {
    background: #E8E8E8;
}

td {
    vertical-align: middle;
}

th.sortable {
    background-image: url(/static/img/sort-unsorted.png);
    background-repeat: no-repeat;
    background-position: 90% 50%;
    background-size: .75em;
    padding-right: 1.5em;
    cursor: pointer;
}

th.sortable.up {
    background-image: url(/static/img/sort-up.png);
}

th.sortable.down {
    background-image: url(/static/img/sort-down.png);
}

#mobile-opp-compact {
    display: none;
}

.favicon {
    color: #808080;
    cursor: pointer;
}

.faved {
    color: #ED9D00;
    cursor: pointer;
}

table#opponents th:nth-child(3) {
    text-align: center;
}

table#opponents th:nth-child(4) {
    text-align: center;
}

table#opponents td:nth-child(3) {
    background: #F0F0F0;
    width: 3em;
}

table#opponents tr:nth-child(odd) td:nth-child(3) {
    background: #F8F8F8;
}

table#opponents td:nth-child(4) {
    text-align: center;
}

table#opponents a, tabl.main-standings a, table#usage a, table#country-stats a {
    display: block;
}

table.main-standings td.team-container a,
table#country-players td.team-container a,
table#mon-users td.team-container a {
    display: inline;
}

td.W, td.L, td.T, table#opponents td:nth-child(3) {
    text-align: center;
}

table#opponents td.W, td.W {
    background: #D1FFD1;
}

table#opponents tr:nth-child(odd) td.W, tr:nth-child(odd) td.W {
    background: #BEE8BE;
}

table#opponents td.L, td.L {
    background: #FFD1D1;
}
/* ... */

